--- a/data-science-3/main.ipynb
+++ b/data-science-3/main.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# Algumas configurações para o matplotlib.\n",
-    "# %matplotlib inline\n",
+    "%matplotlib inline\n",
     "\n",
     "from IPython.core.pylabtools import figsize\n",
     "\n",
